--- a/package.json
+++ b/package.json
@@ -9,14 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/native": "^6.1.17",
-    "@react-navigation/stack": "^6.3.29",
     "expo": "~50.0.13",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.9.0",
     "react": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-gesture-handler": "~2.14.0"
+    "react-native": "0.73.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
